name:                auto-reload-server
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/philopon/auto-reload-server#readme
license:             BSD3
license-file:        LICENSE
author:              Hirotomo Moriwaki
maintainer:          philopon.dependence@gmail.com
copyright:           (c) 2017 Hirotomo Moriwaki
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable auto-reload-server
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , fsnotify
                     , optparse-applicative
                     , process
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/philopon/auto-reload-server
